# pyroll-sims-power-and-labour

./: LICENSE  README.md  hatch.toml  pyproject.toml
docs/: docs.tex  refs.bib
pyroll/: sims_force_torque.py  sims_power_and_labour.py
pyroll/sims_power_and_labour/: __init__.py  exporter_hookimpls.py  hookimpls.py  hookspecs.py  reporter_hookimpls.py  roll_hookimpls.py  roll_hookspecs.py  roll_pass_hookimpls.py  roll_pass_hookspecs.py  roll_pass_roll_hookimpls.py  roll_pass_roll_hookspecs.py
pyroll_sims_power_and_labour/: __init__.py  hookimpls.py  hookspecs.py
tests/: config.yaml  test_solve.py  test_solve3.py
