[tool.poetry]
name = "pyroll-sims-power-and-labour"
version = "1.0.0"
description = "Plugin for PyRoll providing the power and labour calculation after R.B. SimsX"
authors = [
    "Christoph Renzing <christoph.renzing@imf.tu-freiberg.de>"
]

license = "BSD-3-Clause"
homepage = "https://pyroll-project.github.io/"
repository = "https://github.com/pyroll-project/pyroll-core"
documentation = "https://pyroll-project.github.io/modules/pyroll-core/docs/"

[tool.poetry.dependencies]
python = ">= 3.9, <3.11"
pyroll = "1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pyroll = { path = "pyroll-core", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
