[tool.poetry]
name = "pyroll-sims-power-and-labour"
version = "1.0.0"
description = "Plugin for PyRoll providing the power and labour calculation after R.B. Sims"
authors = [
    "Christoph Renzing <christoph.renzing@imf.tu-freiberg.de>"
]

license = "BSD-3-Clause"
homepage = "https://pyroll-project.github.io/"
repository = "https://github.com/pyroll-project/pyroll-sims-power-and-labour"
documentation = "https://pyroll-project.github.io/modules/pyroll-sims-power-and-labour/docs/"
packages = [
    { include = "pyroll/sims_power_and_labour" }
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pyroll = "^1.0.0"
pyroll-hitchcock-roll-flattening = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pyroll = { git = "https://github.com/pyroll-project/pyroll-core.git", branch = "main", develop = true }
pyroll-hitchcock-roll-flattening = { git = "https://github.com/pyroll-project/pyroll-hitchcock-roll-flattening.git", branch = "main", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
